# semestralkaPosko

./: CMakeLists.txt  Client.c  Client.h  Server.c  Server.h  main.c
Dokumentacia/: TicTacToe_PouzivatelskaDokumentacia.docx  TicTacToe_ProgramatorskaDokumentacia.docx
